--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ asgiref==3.7.2
 async-timeout==4.0.3
 attrs==23.1.0
 black==23.10.0
+certifi==2023.7.22
 charset-normalizer==3.3.0
 click==8.1.7
 colorama==0.4.6
@@ -15,6 +16,8 @@ mypy-extensions==1.0.0
 packaging==23.2
 pathspec==0.11.2
 platformdirs==3.11.0
+requests==2.31.0
 sqlparse==0.4.4
 tzdata==2023.3
+urllib3==2.0.7
 yarl==1.9.2
