--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ charset-normalizer==3.3.0
 click==8.1.7
 colorama==0.4.6
 Django==4.2.6
+djangorestframework==3.14.0
 frozenlist==1.4.0
 idna==3.4
 multidict==6.0.4
@@ -16,6 +17,7 @@ mypy-extensions==1.0.0
 packaging==23.2
 pathspec==0.11.2
 platformdirs==3.11.0
+pytz==2023.3.post1
 requests==2.31.0
 sqlparse==0.4.4
 tzdata==2023.3
