--- a/requirements.txt
+++ b/requirements.txt
@@ -10,16 +10,24 @@ click==8.1.7
 colorama==0.4.6
 Django==4.2.6
 djangorestframework==3.14.0
+drf-spectacular==0.26.5
 frozenlist==1.4.0
 idna==3.4
+inflection==0.5.1
+jsonschema==4.19.1
+jsonschema-specifications==2023.7.1
 multidict==6.0.4
 mypy-extensions==1.0.0
 packaging==23.2
 pathspec==0.11.2
 platformdirs==3.11.0
 pytz==2023.3.post1
+PyYAML==6.0.1
+referencing==0.30.2
 requests==2.31.0
+rpds-py==0.10.6
 sqlparse==0.4.4
 tzdata==2023.3
+uritemplate==4.1.1
 urllib3==2.0.7
 yarl==1.9.2
