--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,23 @@
 aiohttp==3.8.6
 aiosignal==1.3.1
+amqp==5.1.1
 asgiref==3.7.2
 async-timeout==4.0.3
 attrs==23.1.0
+billiard==4.1.0
 black==23.10.0
+celery==5.3.4
 certifi==2023.7.22
 charset-normalizer==3.3.0
 click==8.1.7
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.3.0
 colorama==0.4.6
+cron-descriptor==1.4.0
 Django==4.2.6
+django-celery-beat==2.5.0
+django-timezone-field==6.0.1
 djangorestframework==3.14.0
 drf-spectacular==0.26.5
 frozenlist==1.4.0
@@ -16,18 +25,26 @@ idna==3.4
 inflection==0.5.1
 jsonschema==4.19.1
 jsonschema-specifications==2023.7.1
+kombu==5.3.2
 multidict==6.0.4
 mypy-extensions==1.0.0
 packaging==23.2
 pathspec==0.11.2
 platformdirs==3.11.0
+prompt-toolkit==3.0.39
+python-crontab==3.0.0
+python-dateutil==2.8.2
 pytz==2023.3.post1
 PyYAML==6.0.1
+redis==5.0.1
 referencing==0.30.2
 requests==2.31.0
 rpds-py==0.10.6
+six==1.16.0
 sqlparse==0.4.4
 tzdata==2023.3
 uritemplate==4.1.1
 urllib3==2.0.7
+vine==5.0.0
+wcwidth==0.2.8
 yarl==1.9.2
