--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ packaging==23.2
 pathspec==0.11.2
 platformdirs==3.11.0
 prompt-toolkit==3.0.39
+psycopg2==2.9.9
 python-crontab==3.0.0
 python-dateutil==2.8.2
 pytz==2023.3.post1
